# nix

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.json  extension.toml
.github/workflows/: release.yaml
.zed/: settings.json
grammars/: nix.toml  nix.wasm
languages/nix/: config.toml  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  runnables.scm  tasks.json
src/: language_servers.rs  nix.rs
src/language_servers/: nil.rs  nixd.rs
