[package]
name = "nix"
version = "0.1.2"
publish = false
edition = "2021"

[lib]
path = "src/nix.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

